# lumix-hackathon

./: README.md  ingest_fleet_csv.py  main.py  pyproject.toml  requirements.txt  sample_readings.csv  test_csv_upload.py  test_large_csv_parse.py
app/: __init__.py
app/core/: config.py  constants.py  database.py
app/db/: seed.py
app/handlers/: __init__.py  carbon.py  ingestion.py  nasa.py  reports.py  verification.py
app/models/: __init__.py  audit.py  credit.py  inverter.py  reading.py  satellite.py
app/routes/: __init__.py  credits.py  health.py  inverters.py  reports.py
app/utils/: hashing.py  time.py
streamlit_app/: README.md  main.py
