[project]
name = "lum"
version = "0.1.0"
description = "Digital MRV (dMRV) engine for carbon credits"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "streamlit>=1.53.1",
    "plotly>=6.5.2",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "python-multipart>=0.0.22",
]
